added docker compose

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,6 @@
-NODE_ENV = development
+NODE_ENV=development 
+DATABASE_USERNAME=mohit
+DATABASE_PASSWORD=Mohit@123
+DATABASE_PORT=3306
+DATABASE_HOST=localhost
+CORS_URL=http://localhost:3000
